[workspace]
resolver = "2"
members = [
    # core ibc implementation
    "ibc/derive",
    "ibc/modules",
    "ibc/proto",
    "ibc/proto-compiler",

    # ibc contracts for different blockchain runtimes
    "contracts/pallet-ibc/ping",
    "contracts/pallet-ibc/primitives",
    "contracts/pallet-ibc/rpc",
    "contracts/pallet-ibc/runtime-api",
    "contracts/pallet-ibc",
    "contracts/pallet-ibc/simple-iavl",

    # algorithms
    "algorithms/beefy/verifier",
    "algorithms/beefy/prover",
    "algorithms/beefy/primitives",
    "algorithms/grandpa/verifier",
    "algorithms/grandpa/prover",
    "algorithms/grandpa/primitives",

    # ibc light clients
    "light-clients/common",
    "light-clients/ics07-tendermint",
    "light-clients/ics07-tendermint-cw",
    "light-clients/ics08-wasm",
    "light-clients/ics10-grandpa",
    "light-clients/ics10-grandpa-cw",
    "light-clients/ics11-beefy",
    "light-clients/ics13-near",

    # hyperspace
    "hyperspace",
    "hyperspace/core",
    "hyperspace/primitives",
    "hyperspace/parachain",
    "hyperspace/cosmos",
    "hyperspace/testsuite",
    "hyperspace/metrics",

    # utilities
    "utils/subxt/codegen",
    "utils/subxt/generated",
    "utils/parachain-node",
    "utils/parachain-node/runtime",
#     "utils/simnode"
]

[workspace.dependencies]
# Project dependencies
ibc                                        = { path = "ibc/modules", features = [] }
ibc-proto                                  = { path = "ibc/proto" }
ibc-proto-compiler                         = { path = "ibc/proto-compiler" }
ibc-derive                                 = { path = "ibc/derive" }
ibc-rpc                                    = { path = "contracts/pallet-ibc/rpc" }
ibc-runtime-api                            = { path = "contracts/pallet-ibc/runtime-api" }
simple-iavl                                = { path = "contracts/pallet-ibc/simple-iavl" }
ibc-primitives                             = { path = "contracts/pallet-ibc/primitives" }

ics11-beefy                                = { path = "light-clients/ics11-beefy" }
#ics13-near                                = { path = "light-clients/ics13-near" }
ics08-wasm                                 = { path = "light-clients/ics08-wasm", features = ["std"] }
light-client-common                        = { path = "light-clients/common" }
ics10-grandpa                              = { path = "light-clients/ics10-grandpa" }
ics23                                      = { git = "https://github.com/cosmos/ics23", rev = "74ce807b7be39a7e0afb4e2efb8e28a57965f57b", default-features = false }
tendermint-proto                           = { git = "https://github.com/informalsystems/tendermint-rs", rev = "e81f7bf23d63ffbcd242381d1ce5e35da3515ff1", default-features = false }
pallet-ibc                                 = { path = "contracts/pallet-ibc" }
pallet-ibc-ping                            = { path = "contracts/pallet-ibc/ping" }


# polkadot-sdk (wasm)
cumulus-client-collator                    = { version = "0.4.0", default-features = false }
cumulus-client-consensus-proposer          = { version = "0.4.0", default-features = false }
cumulus-pallet-aura-ext                    = { version = "0.4.0", default-features = false }
cumulus-pallet-dmp-queue                   = { version = "0.4.0", default-features = false }
cumulus-pallet-parachain-system            = { version = "0.4.0", default-features = false, features = ["parameterized-consensus-hook"] }
cumulus-pallet-xcm                         = { version = "0.4.0", default-features = false }
cumulus-pallet-xcmp-queue                  = { version = "0.4.0", default-features = false }
cumulus-primitives-core                    = { version = "0.4.0", default-features = false }
cumulus-primitives-parachain-inherent      = { version = "0.4.0", default-features = false }
cumulus-primitives-timestamp               = { version = "0.4.0", default-features = false }
cumulus-primitives-utility                 = { version = "0.4.0", default-features = false }
cumulus-test-relay-sproof-builder          = { version = "0.4.0", default-features = false }
frame-benchmarking                         = { version = "25.0.0", default-features = false }
frame-executive                            = { version = "25.0.0", default-features = false }
frame-support                              = { version = "25.0.0", default-features = false }
frame-system                               = { version = "25.0.0", default-features = false }
frame-system-benchmarking                  = { version = "25.0.0", default-features = false }
frame-system-rpc-runtime-api               = { version = "23.0.0", default-features = false }
frame-try-runtime                          = { version = "0.31.0", default-features = false }
pallet-assets                              = { version = "26.0.0", default-features = false }
pallet-aura                                = { version = "24.0.0", default-features = false }
pallet-authority-discovery                 = { version = "25.0.0", default-features = false }
pallet-authorship                          = { version = "25.0.0", default-features = false }
pallet-babe                                = { version = "25.0.0", default-features = false }
pallet-balances                            = { version = "25.0.0", default-features = false }
pallet-bounties                            = { version = "24.0.0", default-features = false }
pallet-collator-selection                  = { version = "6.0.0", default-features = false }
pallet-collective                          = { version = "25.0.0", default-features = false }
pallet-conviction-voting                   = { version = "25.0.0", default-features = false }
pallet-democracy                           = { version = "25.0.0", default-features = false }
pallet-elections-phragmen                  = { version = "26.0.0", default-features = false }
pallet-identity                            = { version = "25.0.0", default-features = false }
pallet-im-online                           = { version = "24.0.0", default-features = false }
pallet-indices                             = { version = "25.0.0", default-features = false }
pallet-membership                          = { version = "25.0.0", default-features = false }
pallet-message-queue                       = { version = "28.0.0", default-features = false }
pallet-multisig                            = { version = "25.0.0", default-features = false }
pallet-preimage                            = { version = "25.0.0", default-features = false }
pallet-proxy                               = { version = "25.0.0", default-features = false }
pallet-ranked-collective                   = { version = "25.0.0", default-features = false }
pallet-recovery                            = { version = "25.0.0", default-features = false }
pallet-referenda                           = { version = "25.0.0", default-features = false }
pallet-root-testing                        = { version = "1.0.0", default-features = false }
pallet-scheduler                           = { version = "26.0.0", default-features = false }
pallet-session                             = { version = "25.0.0", default-features = false }
pallet-staking                             = { version = "25.0.0", default-features = false }
pallet-sudo                                = { version = "25.0.0", default-features = false }
pallet-timestamp                           = { version = "24.0.0", default-features = false }
pallet-tips                                = { version = "24.0.0", default-features = false }
pallet-transaction-payment                 = { version = "25.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "25.0.0", default-features = false }
pallet-treasury                            = { version = "24.0.0", default-features = false }
pallet-utility                             = { version = "25.0.0", default-features = false }
pallet-vesting                             = { version = "25.0.0", default-features = false }
pallet-whitelist                           = { version = "24.0.0", default-features = false }
pallet-xcm                                 = { version = "4.0.0", default-features = false }
parachain-info                             = { package = "staging-parachain-info", version = "0.4.0", default-features = false }
polkadot-core-primitives                   = { version = "4.0.0", default-features = false }
polkadot-parachain-primitives              = { version = "3.0.0", default-features = false }
polkadot-primitives                        = { version = "4.0.0", default-features = false }
polkadot-runtime-common                    = { version = "4.0.0", default-features = false }
polkadot-runtime-parachains                = { version = "4.0.0", default-features = false }
sp-api                                     = { version = "23.0.0", default-features = false }
sp-application-crypto                      = { version = "27.0.0", default-features = false }
sp-arithmetic                              = { version = "20.0.0", default-features = false }
sp-authority-discovery                     = { version = "23.0.0", default-features = false }
sp-block-builder                           = { version = "23.0.0", default-features = false }
sp-blockchain                              = { version = "25.0.0", default-features = false }
sp-consensus                               = { version = "0.29.0", default-features = false }
sp-consensus-aura                          = { version = "0.29.0", default-features = false }
sp-consensus-slots                         = { version = "0.29.0", default-features = false }
sp-consensus-beefy                         = { version = "18.0.0", default-features = false }
sp-consensus-grandpa                       = { version = "18.0.0", default-features = false }
sp-core                                    = { version = "25.0.0", default-features = false }
sp-debug-derive                            = { version = "12.0.0", default-features = false }
sp-externalities                           = { version = "0.23.0", default-features = false }
sp-inherents                               = { version = "23.0.0", default-features = false }
sp-io                                      = { version = "27.0.0", default-features = false }
sp-keyring                                 = { version = "28.0.0", default-features = false }
sp-keystore                                = { version = "0.31.0", default-features = false }
sp-maybe-compressed-blob                   = { version = "9.0.0", default-features = false }
sp-npos-elections                          = { version = "23.0.0", default-features = false }
sp-offchain                                = { version = "23.0.0", default-features = false }
sp-panic-handler                           = { version = "12.0.0", default-features = false }
sp-runtime                                 = { version = "28.0.0", default-features = false }
sp-runtime-interface                       = { version = "21.0.0", default-features = false }
sp-session                                 = { version = "24.0.0", default-features = false }
sp-staking                                 = { version = "23.0.0", default-features = false }
sp-state-machine                           = { version = "0.32.0", default-features = false }
sp-std                                     = { version = "12.0.0", default-features = false }
sp-storage                                 = { version = "17.0.0", default-features = false }
sp-timestamp                               = { version = "23.0.0", default-features = false }
sp-tracing                                 = { version = "14.0.0", default-features = false }
sp-transaction-pool                        = { version = "23.0.0", default-features = false }
sp-trie                                    = { version = "26.0.0", default-features = false }
sp-version                                 = { version = "26.0.0", default-features = false }
sp-wasm-interface                          = { version = "18.0.0", default-features = false }
sp-weights                                 = { version = "24.0.0", default-features = false }
substrate-fixed                            = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
xcm                                        = { package = "staging-xcm", version = "4.0.0", default-features = false }
xcm-builder                                = { package = "staging-xcm-builder", version = "4.0.1", default-features = false }
xcm-executor                               = { package = "staging-xcm-executor", version = "4.0.2", default-features = false }

# polkadot-sdk (client)
cumulus-client-cli                            = { version = "0.4.0" }
cumulus-client-consensus-aura                 = { version = "0.4.0" }
cumulus-client-consensus-common               = { version = "0.4.0" }
cumulus-client-consensus-relay-chain          = { version = "0.4.0" }
cumulus-client-network                        = { version = "0.4.0" }
cumulus-client-pov-recovery                   = { version = "0.4.0" }
cumulus-client-service                        = { version = "0.4.0" }
cumulus-relay-chain-inprocess-interface       = { version = "0.4.0" }
cumulus-relay-chain-interface                 = { version = "0.4.0" }
cumulus-relay-chain-minimal-node              = { version = "0.4.0" }
cumulus-relay-chain-rpc-interface             = { version = "0.4.0" }
cumulus-test-relay-validation-worker-provider = { version = "0.1.0" }
frame-benchmarking-cli                        = { version = "29.0.0" }
node-inspect                                  = { package = "staging-node-inspect", version = "0.9.0" }
pallet-transaction-payment-rpc                = { version = "27.0.0" }
parachains-common                             = { version = "4.0.0" }
polkadot-cli                                  = { version = "4.0.0" }
polkadot-service                              = { version = "4.0.0" }
sc-basic-authorship                           = { version = "0.31.0" }
sc-chain-spec                                 = { version = "24.0.0" }
sc-cli                                        = { version = "0.33.0" }
sc-client-api                                 = { version = "25.0.0" }
sc-consensus                                  = { version = "0.30.0" }
sc-consensus-aura                             = { version = "0.31.0" }
sc-consensus-grandpa                          = { version = "0.16.0" }
sc-consensus-manual-seal                      = { version = "0.32.0" }
sc-consensus-slots                            = { version = "0.30.0" }
sc-executor                                   = { version = "0.29.0" }
sc-keystore                                   = { version = "22.0.0" }
sc-network                                    = { version = "0.31.0" }
sc-network-common                             = { version = "0.30.0" }
sc-network-sync                               = { version = "0.30.0" }
sc-offchain                                   = { version = "26.0.0" }
sc-rpc                                        = { version = "26.0.0" }
sc-rpc-api                                    = { version = "0.30.0" }
sc-rpc-server                                 = { version = "10.0.0" }
sc-service                                    = { version = "0.32.0" }
sc-sysinfo                                    = { version = "24.0.0" }
sc-telemetry                                  = { version = "12.0.0" }
sc-tracing                                    = { version = "25.0.0" }
sc-transaction-pool                           = { version = "25.0.0" }
sc-transaction-pool-api                       = { version = "25.0.0" }
sp-consensus-babe                             = { version = "0.29.0" }
sp-rpc                                        = { version = "23.0.0" }
substrate-build-script-utils                  = { version = "9.0.0" }
substrate-frame-rpc-system                    = { version = "25.0.0" }
substrate-prometheus-endpoint                 = { version = "0.16.0" }
substrate-test-utils                          = { version = "3.0.0" }
substrate-wasm-builder                        = { version = "14.0.0" }
try-runtime-cli                               = { version = "0.35.0" }
xcm-emulator                                  = { version = "0.2.0" }
xcm-simulator                                 = { version = "4.0.0" }

# Subxt
subxt = { workspace = true }
subxt-generated = { path = "utils/subxt/generated" }

# Other
anyhow                = { version = "1.0.65" }
async-trait           = { version = "0.1.76" }
bstringify            = { version = "0.1.2" }
clap                  = { version = "=4.4.12" }
derive_more           = { version = "0.99.17", features = ["from"] }
env_logger            = { version = "0.10.2" }
ethabi                = { version = "18.0.0", default-features = false }
ethereum              = { version = "0.14.0", default-features = false, features = ["with-codec"] }
futures               = { version =  "0.3.30" }
hex                   = { version = "0.4.3", default-features = false }
hex-literal           = { version = "0.4.1" }
itertools             = { version = "0.10.5" }
impl-trait-for-tuples = { version = "0.2.2" }
jsonrpsee             = { version = "0.16.3" }
log                   = { version = "0.4.21", default-features = false }
num-bigint            = { version = "0.4.3", default-features = false }
num-traits            = { version = "0.2.18", default-features = false }
parity-scale-codec    = { version = "3.6.5", default-features = false, features = ["derive"] }
codec                 = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
paste                 = { version = "1.0.14" }
prometheus            = { version = "0.13.0", default-features = false }
prost                 = { version = "0.11", default-features = false }
rand                  = { version = "0.8.5" }
scale-info            = { version = "2.11.0", default-features = false }
serde                 = { version = "1.0.193", features = ["derive"], default-features = false }
serde_json            = { version = "1.0.109", default-features = false }
serde_derive          = { version = "1.0.104", default-features = false }
scale-encode          = { version = "0.1.2" }
similar-asserts       = { version = "1.1.0" }
smallvec              = { version = "1.13.1" }
static_assertions     = { version = "1.1.0" }
strum                 = { version = "0.25.0", default-features = false, features = ["derive"] }
strum_macros          = { version = "0.25.3" }
thiserror             = { version = "1.0.31" }
time                  = { version = "0.3", default-features = false }
tiny-keccak           = { version = "2.0", features = ["fips202"] }
tokio                 = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
toml                  = { version = "0.7.3" }
tracing               = { version = "0.1.34", default-features = false }


# Integration-tests
beefy-primitives       = { package = "sp-consensus-beefy", version = "10.0.0" }
bp-messages            = { version = "0.4.0" }
bridge-runtime-common  = { version = "0.4.0" }
grandpa-primitives     = { package = "sp-consensus-grandpa", version = "10.0.0" }
pallet-bridge-messages = { version = "0.4.0" }
pallet-asset-rate = { version = "4.0.0", default-features = false }
asset-hub-kusama-runtime    = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }
asset-hub-polkadot-runtime  = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }
bridge-hub-kusama-runtime   = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }
bridge-hub-polkadot-runtime = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }
kusama-runtime              = { package = "staging-kusama-runtime", git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }
kusama-runtime-constants    = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }
polkadot-runtime            = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }
polkadot-runtime-constants  = { git = "https://github.com/polkadot-fellows/runtimes", tag = "v1.1.2" }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# Note that this does **not** affect crates that depend on Substrate. In other words, if you add
# a dependency on Substrate, you have to copy-paste this list in your own `Cargo.toml` (assuming
# that you want the same list). This list is only relevant when running `cargo build` from within
# the Substrate workspace.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
flate2 = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
primitive-types = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }